// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should correctly render expenses summary with multiple expenses 1`] = `
<div
  className="summary"
>
  <div
    className="content-container"
  >
    <h2
      className="summary__title"
    >
      Viewing 
      <span>
        10
      </span>
       
      expenses
       totalling 
      <span>
        $1,142.00
      </span>
    </h2>
    <Link
      className="button"
      to="/create"
    >
      Add Expense
    </Link>
  </div>
</div>
`;

exports[`should correctly render expenses summary with one expense 1`] = `
<div
  className="summary"
>
  <div
    className="content-container"
  >
    <h2
      className="summary__title"
    >
      Viewing 
      <span>
        1
      </span>
       
      expense
       totalling 
      <span>
        $2.30
      </span>
    </h2>
    <Link
      className="button"
      to="/create"
    >
      Add Expense
    </Link>
  </div>
</div>
`;
